--- a/styles/redlookit.css
+++ b/styles/redlookit.css
@@ -440,6 +440,32 @@ button {
     padding-right: 10px;
 }
 
+.btn-more {
+    width: 100%;
+    height: 1em;
+    border-radius: 0.25em;
+    display: inline-block;
+    background-color: var(--background-color);
+    color: var(--background-color);
+    -webkit-transition: background-color 100ms, color 100ms;
+    -moz-transition:    background-color 100ms, color 100ms;
+    -ms-transition:     background-color 100ms, color 100ms;
+    -o-transition:      background-color 100ms, color 100ms;
+    transition:         background-color 100ms, color 100ms;
+}
+.btn-more:hover {
+    background-color: var(--border-color);
+    color: var(--text-color);
+}
+.btn-more:hover::before {
+    content: "...";
+    display: inline-block;
+    height: 1em;
+    position: relative;
+    top: -0.2em;
+    left: 1em;
+}
+
 button .menu {
     padding: 0;
     width: 32px !important;
