--- a/styles/redlookit.css
+++ b/styles/redlookit.css
@@ -441,8 +441,10 @@ button {
 }
 
 .btn-more {
+    cursor: pointer;
+    margin-left: 10px;
     width: 100%;
-    height: 1em;
+    height: 1.2em;
     border-radius: 0.25em;
     display: inline-block;
     background-color: var(--background-color);
@@ -458,11 +460,11 @@ button {
     color: var(--text-color);
 }
 .btn-more:hover::before {
-    content: "...";
+    content: "More replies";
     display: inline-block;
     height: 1em;
     position: relative;
-    top: -0.2em;
+    top: -0.175em;
     left: 1em;
 }
 
