Indicate loading to the user & handle empty 'more' listings

--- a/styles/redlookit.css
+++ b/styles/redlookit.css
@@ -467,6 +467,9 @@ button {
     top: -0.175em;
     left: 1em;
 }
+.btn-more.waiting:hover::before {
+    content: "Loading...";
+}
 
 button .menu {
     padding: 0;
