--- a/styles/redlookit.css
+++ b/styles/redlookit.css
@@ -1751,7 +1751,7 @@ aside.menu-selector {
     z-index: 100;
     min-width: 150px;
     width: 320px;
-    height: 95vh;
+    height: calc(95vh - 49px);
     padding-top: 20px;
     padding-left: 16px;
     background-color: var(--background-color);
@@ -2403,6 +2403,11 @@ h4.settings {
 
 .light.theme16 {
     --placeholder: #3f5a5b;
+}
+
+.block-btn {
+    font-size: 32px;
+    margin: -3px 5px;
 }
 
 .dark.theme16 nav span button, .light.theme16 nav span button {
