--- a/styles/redlookit.css
+++ b/styles/redlookit.css
@@ -1304,7 +1304,8 @@ aside {
     flex-direction: column;
     overflow-x: hidden;
     /* z-index: 0; */
-    min-width: 48px;
+    width: 48px;
+    flex-shrink: 0;
     height: 100vh;
     overflow-y: hidden;
     background-color: var(--border-color-2);
@@ -3144,10 +3145,10 @@ h4.post-section-title > a{
 }
 
 .menu-and-content {
-    max-width: 100%;
     display: flex;
     flex-direction: column;
     flex: 1;
+    min-width: 0px;
 }
 
 .content-body {
